--- a/src/05-member/style/profile-pages/UpdateInfo.scss
+++ b/src/05-member/style/profile-pages/UpdateInfo.scss
@@ -91,7 +91,7 @@
           }
 
           .s-ui-answer {
-            margin-left: 5px;
+            margin-left: 10px;
             font-size: 18px;
             font-weight: 400;
             opacity: 0.7;
@@ -112,6 +112,11 @@
             display: flex;
             flex-direction: column;
             margin-bottom: 20px;
+
+            .s-ui-answer {
+              margin-left: 0;
+
+            }
           }
         }
       }
@@ -122,7 +127,7 @@
       color: #555;
       line-height: 1.2em;
       font-weight: 600;
-      margin: 10px 0;
+      margin: 15px 0;
     }
 
     .s-ui-radio1 {
@@ -160,18 +165,28 @@
     .s-ui-selectAddress {
       display: flex;
       justify-content: last baseline;
-
-      // border: 1px solid black;
+      // border: 1px solid blue;
 
       .s-ui-address {
-        background-color: #2b325ca3;
+        // background-color: #2b325ca3;
         font-size: 16px;
-        color: #fff;
+        // color: #fff;
         margin-bottom: 10px;
-        padding: 10px;
+        // padding: 10px;
         width: 100%;
+        // outline: none;
+        outline-style: none;
+        border: none;
 
         // border: 1px solid red;
+
+        .css-1s2u09g-control {
+          border-radius: 0;
+        }
+
+        // .css-1s2u09g-control:hover {
+        //   border-color: none;
+        // }
       }
 
       .s-ui-address:first-child {
