--- a/src/06-event/styles/06-event-02-events.scss
+++ b/src/06-event/styles/06-event-02-events.scss
@@ -46,7 +46,7 @@ body {
   justify-content: space-between;
 }
 .j-event-middle-events {
-//   outline: 1px black solid;
+  //   outline: 1px black solid;
   @include position(47%, 49%);
   @include size(1100px, 900px);
   transform: translate(-50%, -50%);
@@ -148,27 +148,30 @@ body {
     position: relative;
     z-index: -1;
     overflow: hidden;
+    @media (max-width: 390px){
+        margin-top: 15px;
+    }
     .j-blue-mountain {
       transition: 0.5s;
       transform: scale(0.8);
       @include position(16%, -2%);
       @media (max-width: 390px) {
         transform: scale(0.4);
-        @include position(24%, -40%);
-        &:hover {
-          transform: scale(0.4);
-          @include position(24%, -40%);
-          transform: translateY(-20px);
-        }
+        @include position(27%, -40%);
+        // &:hover {
+        //   transform: scale(0.4);
+        //   @include position(24%, -40%);
+        //   transform: translateY(-20px);
+        // }
       }
       &:hover {
         transform: scale(1);
         transform: translateY(-16%);
-        // @media (max-width: 390px) {
-        //     transform: scale(0.5);
-        //     @include position(24%, -40%);
-        //     transform: translateY(-10px);
-        //   }
+        @media (max-width: 390px) {
+          transform: scale(0.4);
+          @include position(27%, -40%);
+          transform: translateY(-10px);
+        }
       }
     }
     .j-rice-mountain {
@@ -176,15 +179,15 @@ body {
       transform: scale(0.8);
       @include position(16%, 20%);
       @media (max-width: 390px) {
-        transform: scale(0.5);
-        @include position(24%, -19%);
+        transform: scale(0.4);
+        @include position(27%, -19%);
       }
       &:hover {
         transform: scale(1);
         transform: translateY(-16%);
         @media (max-width: 390px) {
-          transform: scale(0.5);
-          @include position(24%, -19%);
+          transform: scale(0.4);
+          @include position(27%, -19%);
         }
       }
     }
@@ -194,15 +197,15 @@ body {
       transform: scale(0.8);
       @include position(16%, 43%);
       @media (max-width: 390px) {
-        transform: scale(0.5);
-        @include position(24%, 4%);
+        transform: scale(0.4);
+        @include position(27%, 4%);
       }
       &:hover {
         transform: scale(1);
         transform: translateY(-16%);
         @media (max-width: 390px) {
-          transform: scale(0.5);
-          @include position(24%, 4%);
+          transform: scale(0.4);
+          @include position(27%, 4%);
         }
       }
     }
@@ -211,8 +214,8 @@ body {
       transform: scale(0.8);
       @include position(16%, 65%);
       @media (max-width: 390px) {
-        transform: scale(0.5);
-        @include position(24%, 27%);
+        transform: scale(0.4);
+        @include position(27%, 27%);
       }
       &:hover {
         transform: scale(1);
@@ -221,6 +224,9 @@ body {
     }
     .img {
       overflow: hidden;
+      @media (max-width: 390px) {
+        transform: scale(0.4);
+      }
     }
   }
   .j-event-card {
@@ -230,7 +236,7 @@ body {
       padding: 15px 15px;
     }
     .j-lego {
-      @include size(100%, 500px);
+      @include size(100%, 700px);
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: 95px 1fr 80px;
@@ -241,10 +247,10 @@ body {
         'image image text'
         'image image sold';
       @media (max-width: 390px) {
-        @include size(100%, 400px);
+        @include size(100%, 500px);
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 60px 1fr 120px 50px;
+        grid-template-rows: 60px 180px 1fr 50px;
         gap: 15px;
         border-radius: 5px;
         grid-template-areas:
@@ -261,12 +267,12 @@ body {
         font-weight: 900;
         text-align: center;
         color: $colorMiddleGrey;
-        @media (max-width: 390px){
-            border-radius: 5px;
-            font-size: 3rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        @media (max-width: 390px) {
+          border-radius: 5px;
+          font-size: 3rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
       }
       .j-card-image {
@@ -275,8 +281,8 @@ body {
         width: 100%;
         overflow: hidden;
         object-fit: cover;
-        @media (max-width: 390px){
-            border-radius: 5px;
+        @media (max-width: 390px) {
+          border-radius: 5px;
         }
         img {
           width: 100%;
@@ -293,12 +299,12 @@ body {
         background-color: $colorMiddleGrey;
         color: $colorWhite;
         text-align: center;
-        @media (max-width: 390px){
-            border-radius: 5px;
-            padding: 15px 15px;
-            font-size: 1.5rem;
-            line-height: 1.8rem;
-            text-align: center;
+        @media (max-width: 390px) {
+          border-radius: 5px;
+          padding: 15px 15px;
+          font-size: 1.5rem;
+          line-height: 1.8rem;
+          text-align: center;
         }
       }
       .j-card-sold {
@@ -309,12 +315,12 @@ body {
         font-weight: 900;
         text-align: center;
         color: $colorMiddleGrey;
-        @media (max-width: 390px){
-            border-radius: 5px;
-            font-size: 2.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        @media (max-width: 390px) {
+          border-radius: 5px;
+          font-size: 2.5rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
       }
       div {
