modify NavBar icon

--- a/src/00-homepage/styles/NavBar.scss
+++ b/src/00-homepage/styles/NavBar.scss
@@ -51,17 +51,17 @@ $border-radius-button: 8px;
             overflow: hidden;
             border: $border-sm;
             margin-right: 6px;
-            background: {
-                color: white;
+            background-color: #fff;
+
+            img {
+                width: 100%;
+                object-fit: cover;
             }
             
-            .y-cart-icon {
-                margin-right: 20px;
-                img {
-                    width: 100%;
-                    object-fit: cover;
-                }
-            }
+        }
+
+        .y-cart-icon {
+            margin-right: 8px;
         }
     }
 }
@@ -85,12 +85,15 @@ $border-radius-button: 8px;
                 width: 55px;
                 border: $border-lg;
                 margin-right: 12px;
-                background: {
+                
+                img {
+
                 }
-    
-                .y-cart-icon {
-                    margin-right: 20px;
-                }
+                
+            }
+
+            .y-cart-icon {
+                margin-right: 20px;
             }
         }
         
