--- a/src/04-product/components/style/ProductCard.scss
+++ b/src/04-product/components/style/ProductCard.scss
@@ -1,4 +1,3 @@
-
 main {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -23,50 +22,29 @@ $main-border-radius: 8px;
 @function line($count:1) {
     @return $base-line-eight * $count;
 }
-
-
-    // %h1 {
-    //     font-size: 48px;
-    // }
-    // %h2 {
-    //     font-size: 36px;
-    // }
-    // %h3 {
-    //     font-size: 20px;
-    //     color: #2B325C;
-    //     font-weight: 500;
-    // }
-    // %h4 {
-    //     font-size: 18px;
-    // }
-    // %p{
-    //     font-size: 16px;
-    // }
-    // @media screen {
-    //     min-width: 390px;
-    //     %h1 {
-    //         font-size: 24px;
-    //     }
-    //     %h2 {
-    //         font-size: 18px;
-    //     }
-    //     %h3 {
-    //         font-size: 16px;
-    //         color: #2B325C;
-    //     }
-    //     %h4 {
-    //         font-size: 14px;
-    //     }
-    //     %p{
-    //         font-size: 12px;
-    //     }
-    // }
-
 %a-flex {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+    %h1 {
+        font-size: 48px;
+    }
+    %h2 {
+        font-size: 36px;
+    }
+    %h3 {
+        font-size: 20px;
+        color: #2B325C;
+        font-weight: 500;
+    }
+    %h4 {
+        font-size: 18px;
+    }
+    %p{
+        font-size: 16px;
+    }
 
 .a-produtCardWrapper {
     width: 30%;
@@ -91,7 +69,7 @@ $main-border-radius: 8px;
         object-fit: cover;
         object-position: center center;
         padding: 0;
-        // aspect-ratio: 4/3;
+        aspect-ratio: 4/3;
         }
     }
     .a-productCardTitle {
@@ -152,14 +130,14 @@ $main-border-radius: 8px;
         margin-left: 6px;
     }
     .a-addButton {
-        width: 180px;
+        width: 200px;
         text-align: center;
         @extend %a-flex;
         background-color: $main-yellow;
         color: $main-blue;
         border: $main-border;
         border-radius: $main-border-radius;
-        padding: 3px 20px;
+        padding: 5px 20px;
         margin: 15px 0 40px 0;
         font-weight: 500;
     }
