--- a/src/06-event/components/06-event-comp-left.scss
+++ b/src/06-event/components/06-event-comp-left.scss
@@ -33,7 +33,6 @@ $colorBlack: #000000;
   list-style-type: none;
   text-decoration: none;
 }
-
 html {
   // filter: invert(1);
 
@@ -44,44 +43,9 @@ html {
 body {
   background-color: $colorWhite;
 }
-.j-left {
-  @include size(250px, 100vh);
-  background-color: $colorYellow;
-  ul {
-    @include size(100%, 100%);
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    li {
-      div {
-        width: 240px;
-        font-size: 2.3rem;
-        color: $colorWhite;
-        position: relative;
-        text-align: center;
-
-        &:hover {
-          color: $colorBlue;
-          &::after {
-            content: '';
-            background-image: url(../svg/tada.svg);
-            position: absolute;
-            background-repeat: no-repeat;
-            top: -16px;
-            left: 12px;
-            width: 250px;
-            height: 100px;
-            padding: 0;
-          }
-        }
-      }
-    }
-  }
-}
-@media (max-width:390px) {
+.j-left-wrap {
+  width: 70%;
+  display: flex;
   .j-left {
     @include size(250px, 100vh);
     background-color: $colorYellow;
@@ -90,7 +54,7 @@ body {
       padding: 0;
       list-style-type: none;
       display: flex;
-      flex-direction: row !important;
+      flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
       li {
@@ -100,7 +64,7 @@ body {
           color: $colorWhite;
           position: relative;
           text-align: center;
-  
+
           &:hover {
             color: $colorBlue;
             &::after {
@@ -119,5 +83,11 @@ body {
       }
     }
   }
+  .j-wave {
+    margin-left: -2px;
+    width: 50%;
+    @media (max-width: 390px){
+      transform: rotate(90%);
+    }
+  }
 }
-
