--- a/src/01-cart/styles/PickupHoursBtn.scss
+++ b/src/01-cart/styles/PickupHoursBtn.scss
@@ -27,13 +27,13 @@ $border-radius-button: 8px;
 * {
     box-sizing: border-box;
 }
-.y-store-status-border {
+.y-pickup-status-border {
     border-radius: $border-radius-button;
     border: $border-sm;
-    background-color: $btn-red;
+    background-color: $btn-green;
     padding: 2px 20px;
 
-    .y-store-status {
+    .y-pickup-status {
         color: #fff;
         font-size: 14px;
         font-weight: bold;
@@ -41,14 +41,15 @@ $border-radius-button: 8px;
     }
 }
 
-@media (min-width:391px) {
-    .y-store-status-border {
+@media (min-width: 391px) {
+    .y-pickup-status-border {
         border-radius: $border-radius-card;
         border: $border-lg;
-        background-color: $btn-red;
+        background-color: $btn-green;
         padding: 5px 35px;
     
-        .y-store-status {
+        .y-pickup-status {
+            color: #fff;
             font-size: 20px;
         }
     }
