--- a/src/01-cart/styles/CartList.scss
+++ b/src/01-cart/styles/CartList.scss
@@ -29,11 +29,15 @@ $border-radius-button: 8px;
     .y-Cart-nav {
         width: 100%;
         background-color: #fff;
-        // position: fixed;
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        left: 0;
+        right: 0;
 
         .y-Cart-wave-base {
             width: 100%;
-            height: 4px;
+            height: 6px;
             background-color: $main-yellow;
         }
     }
@@ -42,6 +46,8 @@ $border-radius-button: 8px;
         width: 100%;
         margin: 0 auto;
         // padding: 0 20px;
+        padding-top: 65px;
+        position: relative;
 
         .y-Cart-page {
             width: 100%;
@@ -68,7 +74,7 @@ $border-radius-button: 8px;
             margin: 0 auto;
             padding: 0 30px;
             background-color: #fff;
-
+            position: fixed;
             .y-progress-wrap{
                 width: 100%;
                 padding: 10px 12px 6px;
@@ -135,7 +141,7 @@ $border-radius-button: 8px;
 
                 .y-progress-icon {
                     position: absolute;
-                    top: -5px;
+                    top: -1px;
                     left: 35%;
                     width: 32px;
                     aspect-ratio: 1/1;
@@ -152,15 +158,16 @@ $border-radius-button: 8px;
     }
 
     .y-Cart-middle {
-        padding: 20px 30px;
-        background-color: #ccc;
+        padding: 0 30px;
+        padding-top: 75px;
+        background-color: #ddd;
 
         li {
             list-style: none;
             font-size: 14px;
             color: $main-text;
             font-family: Arial, Helvetica, sans-serif;
-            line-height: 1.5;
+            line-height: 1.8;
         }
         
         .y-Cart-shop {
@@ -174,7 +181,7 @@ $border-radius-button: 8px;
 
                 .y-Cart-shop-cover{
                     width: 100%;
-                    height: 200px;
+                    height: 180px;
                     // padding: 10px;
                     background-color: #fff;
                     overflow: hidden;
@@ -191,11 +198,11 @@ $border-radius-button: 8px;
                 .y-Cart-shop-info {
                     background-color: #fff;
                     border-bottom: $border-sm;
-                    padding: 15px 20px;
-                    // position: relative;
+                    padding: 25px 20px 15px;
 
                     .y-Cart-shop-top {
-                        
+                        display: flex;
+                        justify-content: space-between;
                         .y-Cart-shop-name {
                             // font-size: 18px;
                             color: $main-blue;
@@ -228,20 +235,44 @@ $border-radius-button: 8px;
                 .y-Cart-shop-pickup {
                     background-color: #fff;
                     // border-bottom: $border-sm;
-                    padding: 15px 20px;
-                    position: relative;
-                    overflow: hidden;
+                    padding: 25px 20px 15px;
+                    
+                    .y-Cart-pickup-top {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        
+                        .y-Cart-pickup-title {
+                            // font-size: 18px;
+                            color: $main-blue;
+                            margin-bottom: 16px;
+                            p {
+                                font-weight: bold;
+                                line-height: 30px;
+                            }
+                            
+                        }
 
-                    .y-Cart-pickup-title {
-                        // font-size: 18px;
-                        color: $main-blue;
-                        font-weight: bold;
-                        margin-bottom: 16px;
+                        .y-Cart-pickup-status {
 
+                        }
+                    }
+                    
+                    .y-Cart-pickup-bottom {
+
+                        .y-Cart-pickup-time {
+                        }
                     }
 
-                    .y-Cart-pickup-time {
+                    .y-Cart-pickup-border {
+                        background-color: #91D3F5;
+                        .y-Cart-pickup-icon {
 
+                        }
+
+                        .y-Cart-pickup-info {
+
+                        }
                     }
                 }
             }
@@ -400,9 +431,7 @@ $border-radius-button: 8px;
                         border-bottom: none;
                         border-right: $border-lg;
                         padding: 15px 20px;
-                        display: flex;
                         flex-direction: column;
-                        justify-content: space-between;
 
                         .y-Cart-shop-name {
                             font-size: 24px;
@@ -452,16 +481,48 @@ $border-radius-button: 8px;
                         flex-direction: column;
                         justify-content: space-between;
     
-                        .y-Cart-pickup-title {
-                            font-size: 24px;
-                            line-height: 40px;
-                            margin-bottom: 16px;
-    
+                        .y-Cart-pickup-top {
+                            width: 100%;
+
+                            .y-Cart-pickup-title {
+                                font-size: 24px;
+                                line-height: 40px;
+                                margin-bottom: 16px;
+                                p {
+                                    
+                                }
+        
+                            }
                         }
-    
+                        
                         .y-Cart-pickup-time {
-    
+                            
+                        .y-Cart-pickup-top {
+
+                            .y-Cart-pickup-title {
+
+                            }
+                            .y-Cart-pickup-statu {
+                                
+                            }
                         }
+
+                        .y-Cart-pickup-bottom {
+
+                            .y-Cart-pickup-time {
+                            }
+                        }
+    
+                        .y-Cart-pickup-border {
+                            .y-Cart-pickup-icon {
+    
+                            }
+    
+                            .y-Cart-pickup-info {
+                                
+                            }
+                        }
+                    }
                     }
                 }
         }
