--- a/src/01-cart/styles/CartList.scss
+++ b/src/01-cart/styles/CartList.scss
@@ -175,8 +175,8 @@ $border-radius-button: 8px;
             padding: 10px;
 
             .y-Cart-shop-border {
-                border: $border-sm;
-                border-radius: $border-radius-button;
+                // border: $border-sm;
+                // border-radius: $border-radius-button;
                 overflow: hidden;
 
                 .y-Cart-shop-cover{
@@ -185,7 +185,9 @@ $border-radius-button: 8px;
                     // padding: 10px;
                     background-color: #fff;
                     overflow: hidden;
-                    border-bottom: $border-sm;
+                    // border-bottom: $border-sm;
+                    display: none;
+                    
                     img {
                         width: 100%;
                         height: 100%;
@@ -197,8 +199,10 @@ $border-radius-button: 8px;
 
                 .y-Cart-shop-info {
                     background-color: #fff;
-                    border-bottom: $border-sm;
-                    padding: 25px 20px 15px;
+                    // border-bottom: $border-sm;
+                    padding: 25px 20px;
+                    margin-bottom: 15px;
+                    // border-radius: $border-radius-button;
 
                     .y-Cart-shop-top {
                         display: flex;
@@ -235,8 +239,9 @@ $border-radius-button: 8px;
                 .y-Cart-shop-pickup {
                     background-color: #fff;
                     // border-bottom: $border-sm;
-                    padding: 25px 20px 15px;
-                    
+                    padding: 25px 20px;
+                    // border-radius: $border-radius-button;
+
                     .y-Cart-pickup-top {
                         display: flex;
                         justify-content: space-between;
@@ -278,6 +283,8 @@ $border-radius-button: 8px;
             }
             
         }
+
+
     }
 
     .y-Cart-bottom{
