--- a/src/01-cart/styles/EmptyCartBtn.scss
+++ b/src/01-cart/styles/EmptyCartBtn.scss
@@ -35,15 +35,17 @@ $border-radius-button: 8px;
     border: $border-white-sm;
     background-color: $btn-pink;
     padding: 2px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
 
     .y-empty-cart-icon {
-        
-        img {
+        width: 20px;
+        aspect-ratio: 1/1;
 
-        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }  
     }
     
     .y-empty-cart {
@@ -56,9 +58,12 @@ $border-radius-button: 8px;
 
 @media (min-width: 391px) {
     .y-empty-cart-border {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border-radius: $border-radius-card;
         border: $border-white-lg;
-        padding: 5px 35px;
+        padding: 8px 35px;
     
         .y-empty-cart-icon {
             img {
